--- a/CSS/About me.css
+++ b/CSS/About me.css
@@ -1,4 +1,4 @@
-#About_me{
+#Achievements{
     padding-top: 50px;
     padding-bottom: 50px;
     font-family: 'Cera Round Pro';
@@ -7,7 +7,7 @@
     overflow: auto;
 }
 
-#About_me p{
+#Achievements p{
     margin-left: 150px;
     margin-right: 150px;
     font-size: large;
@@ -22,7 +22,7 @@
     overflow: auto;
 }
 
-.About_card {
+.Achievement_card {
     position: relative;
     float: left;
     background: transparent;
