--- a/CSS/About me.css
+++ b/CSS/About me.css
@@ -41,7 +41,7 @@
     margin-left: 15px;
 }
 
-.About_card:hover {
+.Achievement_card:hover {
     color: white;
     background: #1e1e1e;
     border-color: transparent;
