Update skills' animation

--- a/CSS/My skills.css
+++ b/CSS/My skills.css
@@ -30,6 +30,7 @@
   color: white;
   text-align: right;
   padding-right: 10px;
+  width: 0%;
 }
 
 #cpp{
@@ -71,6 +72,7 @@
 .showSkills{
   animation-name: skills;
   animation-duration: 2s;
+  animation-delay: 1s;
   animation-fill-mode: forwards;
 }
 
